changed show & index for lunches to have the meal.dish and food.vegetable instead of ids.

--- a/app/views/lunches/index.html.erb
+++ b/app/views/lunches/index.html.erb
@@ -20,8 +20,8 @@
 <% @lunches.each do |lunch| %>
   <tr>
     <td><%= lunch.occasion %></td>
-    <td><%= lunch.food_id %></td>
-    <td><%= lunch.meal_id %></td>
+    <td><%= lunch.food.vegetable %></td>
+    <td><%= lunch.meal.dish %></td>
     <td><%= lunch.date %></td>
     <td><%= link_to 'Show', lunch %></td>
     <td><%= link_to 'Edit', edit_lunch_path(lunch) %></td>
