--- a/app/views/lunches/show.html.erb
+++ b/app/views/lunches/show.html.erb
@@ -7,12 +7,12 @@
 
 <p>
   <b>Food:</b>
-  <%= @lunch.food_id %>
+  <%= @lunch.food.vegetable %>
 </p>
 
 <p>
   <b>Meal:</b>
-  <%= @lunch.meal_id %>
+  <%= @lunch.meal.dish %>
 </p>
 
 <p>
